# Snakepp

./: .gitignore  .gitmodules  CMakeLists.txt  config.toml
resource/: config.toml
src/: Food.cpp  Food.hpp  Matrix.cpp  Matrix.hpp  NeuralNet.hpp  NuralNet.cpp  main.cpp
src/Components/: Body.hpp  Food.hpp  Head.hpp  Position.hpp
src/Engine/: Engine.cpp  Engine.hpp
src/Event/: Close.hpp  GameOver.hpp  UserInput.hpp
src/Graphic/: Graphic.cpp  Graphic.hpp  GridShape.cpp  GridShape.hpp
src/Graphic/ResourceManager/: Animation.cpp  Animation.hpp  ResourceManager.cpp  ResourceManger.hpp
